# discord-rss-notifier

./: .gitignore  Cargo.toml  README.md
migrations/2022-06-27-041814_rss_notifier/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs
src/feeds/: mod.rs
src/message_handler/: message_commands.rs  mod.rs
src/models/: mod.rs
