[package]
name = "discord-rss-notifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

[dependencies]
async-trait = "0.1.56"
diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "4.0.0"
dotenv = "0.15.0"
futures = "0.3.21"
log = "0.4.17"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
simple_logger = "2.1.0"
thiserror = "1.0.31"
