[package]
name = "discord-rss-notifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

[dependencies]
atom_syndication = { version = "0.11", default-features = false }
diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "4.0.0"
dotenv = "0.15.0"
log = "0.4.17"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = "0.11.11"
rss = { version = "2.0.1", default-features = false, features = [
    "atom", "atom_syndication"
] }
thiserror = "1.0.31"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
